fix(checkbox): fix checkbox alignment. remove styled component

--- a/src/components/DataTable/_data-table.scss
+++ b/src/components/DataTable/_data-table.scss
@@ -75,3 +75,14 @@ html[dir='rtl'] {
     padding-right: $spacing-04;
   }
 }
+
+.#{$prefix}--data-table .#{$prefix}--checkbox-table-cell {
+  padding-bottom: $spacing-03;
+  padding-top: $spacing-03;
+  width: 2.5rem;
+
+  /* Added to undo carbon component. this needs to be removed when we redo this table */
+  &::after {
+    background-color: transparent !important;
+  }
+}
